# wechat-timemachine

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .pylintrc  AGENTS.md  Justfile  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini  wechat-backup.spec
docs/: architecture.md  design.md
src/wechat_backup/: __main__.py  contact.py  helper.py
src/wechat_backup/command/: extract_contacts.py  extract_messages.py
src/wechat_backup/message/: parser.py
src/wechat_backup/platform/: __init__.py
src/wechat_backup/platform/android/: __init__.py  contact.py  message.py
src/wechat_backup/platform/ios/: __init__.py  context.py  message.py
src/wechat_dumper/: __init__.py  __main__.py
src/wechat_dumper/command/: extract_contacts.py  extract_messages.py
src/wechat_dumper/message/: parser.py
src/wechat_dumper/platform/android/: __init__.py  context.py  message.py
src/wechat_dumper/platform/ios/: __init__.py  context.py  message.py
src/wechat_timemachine/: __init__.py  __main__.py  helper.py
src/wechat_timemachine/command/: __init__.py  extract_contacts.py  extract_messages.py
src/wechat_timemachine/message/: parser.py
src/wechat_timemachine/platform/android/: __init__.py  contact.py  context.py  message.py
src/wechat_timemachine/platform/ios/: __init__.py  contact.py  context.py  message.py
tests/: conftest.py  test_contact.py  test_helper.py  test_message_parser.py  test_message_typing.py  test_platform_android.py  test_platform_ios.py
wechat_backup/: __main__.py  context.py  helper.py
wechat_backup/command/: extract_contacts.py  extract_messages.py
wechat_backup/message/: typing.py
wechat_backup/platform/android/: __init__.py  context.py
wechat_backup/platform/ios/: __init__.py  contact.py  context.py
