[tool.poetry]
name = "wechat-backup"
version = "0.1.0"
description = "This package provides a command-line interface tool to extract user data from WeChat backup files."
authors = ["Garrett HE <garrett.he@hotmail.com>"]
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/he-yaowen/wechat-backup"
repository = "https://github.com/he-yaowen/wechat-backup.git"
keywords = ["wechat", "backup", "extractor"]
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Utilities",
]
include = ["COPYING"]
packages = [{ include = "wechat_backup", from = "src" }]

[tool.poetry.dependencies]
python = "^3.8,<3.12"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
pyinstaller = "^5.13.0"
pylint = "^2.17.5"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
