[project]
name = "wechat-dumper"
version = "1.0.0"
description = "A command-line tool to dump user data from WeChat backup files."
requires-python = ">=3.10,<3.15"
authors = [
    { name = "Garrett HE", email = "garrett.he@outlook.com" }
]
readme = "README.md"
license = { text = "GPL-3.0" }
keywords = ["wechat", "backup", "dumper"]
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
]
dependencies = [
    "biplist>=1.0.3",
    "click>=8.3.0",
    "lxml>=6.0.2",
    "tabulate>=0.9.0",
]

[project.urls]
homepage = "https://github.com/he-yaowen/wechat-dumper"
repository = "https://github.com/garrett-he/wechat-dumper.git"

[project.scripts]
wechat-dumper = "wechat_dumper.__main__:cli"

[dependency-groups]
dev = [
    "nuitka>=2.8.4",
    "pre-commit>=4.3.0",
    "pylint>=4.0.2",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "tox>=4.32.0",
    "zstandard>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
