[project]
name = "wechat-timemachine"
version = "1.0.0"
description = "A command-line tool to dump user data from WeChat backup files."
requires-python = ">=3.10,<3.15"
authors = [
    { name = "Garrett HE", email = "garrett.he@outlook.com" }
]
readme = "README.md"
license = { text = "GPL-3.0" }
keywords = ["wechat", "backup", "dumper"]
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
]
dependencies = [
    "biplist>=1.0.3",
    "click>=8.3.0",
    "lxml>=6.0.2",
    "tabulate>=0.9.0",
]

[project.urls]
homepage = "https://github.com/he-yaowen/wechat-timemachine"
repository = "https://github.com/garrett-he/wechat-timemachine.git"

[project.scripts]
wechat-timemachine = "wechat_timemachine.__main__:cli"

[dependency-groups]
dev = [
    "nuitka>=2.8.4",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.11.0",
    "zstandard>=0.25.0",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:unclosed database:ResourceWarning",
    "ignore:Enable tracemalloc:ResourceWarning",
]

[tool.ruff]
line-length = 160
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["F403", "F405"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
line-ending = "lf"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
